fixed spacing issue around the tech list

--- a/src/css/technology-list.css
+++ b/src/css/technology-list.css
@@ -10,20 +10,17 @@ path {
 
 .tech-list-ul {
     display: grid;
-    grid-template-columns: auto;
+    justify-content: space-evenly;
+    grid-template-columns: auto auto;
     list-style: none;
     padding:  40px 0;
 }
 
 .tech-svg {
     padding: 40px;
+    min-width: 200px;
 }
 
-@media (min-width: 540px) {
-    .tech-list-ul {
-        grid-template-columns: auto auto;       
-    }
-}
 
 @media (min-width: 768px) {
     .tech-list-ul {
@@ -31,7 +28,7 @@ path {
     }
 
     .tech-svg {
-        max-width: 150px;
+        min-width: 150px;
         padding: 20px;
     }
 }
